--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -1,7 +1,7 @@
 .login-background {
   width: 100vw;
   height: 100vh;
-  background-image: url('../images/BackGroundLoginPage.png');
+  background-image: url('/images/BackGroundLoginPage.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
